overflow fixed

--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -1,6 +1,5 @@
 .cartModal{
     width:80%;
-    overflow: hidden;
 }
 
 .item-list{
